--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href=".\resources\css\style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
